Fixed text overflow in slider component

--- a/src/app/components/slider/slider.component.scss
+++ b/src/app/components/slider/slider.component.scss
@@ -6,6 +6,7 @@
   justify-content: space-between;
   height: 35rem;
   position: relative;
+  overflow: hidden;
   .slide {
     position: absolute;
     width: 100%;
